kubernetes_task_1/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp1-ingress
spec:
  rules:
  - host: sa.homework
    http: 
      paths: 
      - path: /
        backend:
          serviceName: myapp1-service
          servicePort: 8081
